--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
       border: 4px solid #22c55e;
       border-radius: 16px;
       background: black;
+      display: none;
+    }
+    button {
+      background: #22c55e;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -33,24 +43,35 @@
   <div class="box">
     <h2>SCAN QR CODE</h2>
     <p>Arahkan QR ke kamera</p>
+
+    <button id="startBtn">MULAI SCAN</button>
+
     <div id="reader"></div>
   </div>
 
   <script>
+    const startBtn = document.getElementById("startBtn");
+    const readerDiv = document.getElementById("reader");
     const scanner = new Html5Qrcode("reader");
 
-    Html5Qrcode.getCameras().then(cameras => {
-      scanner.start(
-        cameras[0].id,
-        { fps: 10, qrbox: 250 },
-        text => {
-          // pindah ke halaman voting Apps Script
-          window.location.href = text;
-        }
-      );
-    }).catch(err => {
-      alert("Kamera tidak bisa diakses. Pastikan izin kamera diaktifkan.");
-      console.error(err);
+    startBtn.addEventListener("click", () => {
+      startBtn.style.display = "none";
+      readerDiv.style.display = "block";
+
+      Html5Qrcode.getCameras().then(cameras => {
+        scanner.start(
+          cameras[0].id,
+          { fps: 10, qrbox: 250 },
+          text => {
+            scanner.stop().then(() => {
+              window.location.href = text;
+            });
+          }
+        );
+      }).catch(err => {
+        alert("Kamera tidak bisa diakses. Periksa izin kamera.");
+        console.error(err);
+      });
     });
   </script>
 </body>
