--- a/index.html
+++ b/index.html
@@ -1,78 +1,128 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Scan QR OSIS</title>
-  <script src="https://unpkg.com/html5-qrcode@2.3.10/html5-qrcode.min.js"></script>
+
+  <!-- Library QR -->
+  <script src="https://unpkg.com/html5-qrcode"></script>
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       height: 100vh;
-      background: #0f172a;
+      background: linear-gradient(135deg, #0f172a, #020617);
+      font-family: Arial, Helvetica, sans-serif;
       color: white;
-      font-family: Arial, sans-serif;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
     }
-    .box {
+
+    .container {
       text-align: center;
+      width: 100%;
+      max-width: 420px;
+      padding: 20px;
     }
+
+    h1 {
+      margin-bottom: 6px;
+      font-size: 28px;
+      letter-spacing: 1px;
+    }
+
+    p {
+      margin-top: 0;
+      margin-bottom: 18px;
+      opacity: 0.8;
+      font-size: 15px;
+    }
+
     #reader {
       width: 300px;
-      margin: 20px auto;
+      height: 300px;
+      margin: 0 auto;
+      border-radius: 18px;
+      overflow: hidden;
       border: 4px solid #22c55e;
-      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(34,197,94,0.4);
       background: black;
-      display: none;
     }
-    button {
-      background: #22c55e;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
+
+    .hint {
+      margin-top: 14px;
+      font-size: 13px;
+      opacity: 0.7;
+    }
+
+    .footer {
+      margin-top: 20px;
+      font-size: 12px;
+      opacity: 0.4;
     }
   </style>
 </head>
 
 <body>
-  <div class="box">
-    <h2>SCAN QR CODE</h2>
+  <div class="container">
+    <h1>SCAN QR CODE</h1>
     <p>Arahkan QR ke kamera</p>
 
-    <button id="startBtn">MULAI SCAN</button>
-
     <div id="reader"></div>
+
+    <div class="hint">
+      Kamera akan otomatis mendeteksi QR
+    </div>
+
+    <div class="footer">
+      Pemilihan OSIS
+    </div>
   </div>
 
   <script>
-    const startBtn = document.getElementById("startBtn");
-    const readerDiv = document.getElementById("reader");
-    const scanner = new Html5Qrcode("reader");
+    // Anti back & refresh (kiosk-friendly)
+    history.pushState(null, null, location.href);
+    window.onpopstate = () => {
+      history.pushState(null, null, location.href);
+    };
 
-    startBtn.addEventListener("click", () => {
-      startBtn.style.display = "none";
-      readerDiv.style.display = "block";
+    let isScanned = false;
+    const html5QrCode = new Html5Qrcode("reader");
 
-      Html5Qrcode.getCameras().then(cameras => {
-        scanner.start(
-          cameras[0].id,
-          { fps: 10, qrbox: 250 },
-          text => {
-            scanner.stop().then(() => {
-              window.location.href = text;
-            });
-          }
-        );
-      }).catch(err => {
-        alert("Kamera tidak bisa diakses. Periksa izin kamera.");
+    function startScanner() {
+      html5QrCode.start(
+        { facingMode: "environment" },
+        {
+          fps: 10,
+          qrbox: { width: 220, height: 220 }
+        },
+        (decodedText) => {
+          if (isScanned) return;
+          isScanned = true;
+
+          // Hentikan kamera sebelum pindah halaman
+          html5QrCode.stop().then(() => {
+            // Redirect ke link di QR (Apps Script voting)
+            window.location.replace(decodedText);
+          });
+        },
+        (error) => {
+          // error diabaikan agar tidak spam
+        }
+      ).catch((err) => {
+        alert("Kamera tidak bisa diakses.\nPastikan izin kamera diaktifkan.");
         console.error(err);
       });
-    });
+    }
+
+    // Auto start saat halaman terbuka
+    startScanner();
   </script>
 </body>
 </html>
