--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Scan QR OSIS</title>
 
+  <!-- Library QR -->
   <script src="https://unpkg.com/html5-qrcode"></script>
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       height: 100vh;
@@ -26,28 +31,40 @@
       padding: 20px;
     }
 
-    h1 { margin-bottom: 6px; }
-    p { opacity: .8; }
+    h1 {
+      margin-bottom: 6px;
+      font-size: 28px;
+      letter-spacing: 1px;
+    }
+
+    p {
+      margin-top: 0;
+      margin-bottom: 18px;
+      opacity: 0.8;
+      font-size: 15px;
+    }
 
     #reader {
       width: 300px;
       height: 300px;
-      margin: 20px auto;
+      margin: 0 auto;
       border-radius: 18px;
       overflow: hidden;
       border: 4px solid #22c55e;
+      box-shadow: 0 0 20px rgba(34,197,94,0.4);
       background: black;
-      display: none;
     }
 
-    button {
-      padding: 14px 20px;
-      border-radius: 12px;
-      border: none;
-      background: #22c55e;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
+    .hint {
+      margin-top: 14px;
+      font-size: 13px;
+      opacity: 0.7;
+    }
+
+    .footer {
+      margin-top: 20px;
+      font-size: 12px;
+      opacity: 0.4;
     }
   </style>
 </head>
@@ -55,37 +72,57 @@
 <body>
   <div class="container">
     <h1>SCAN QR CODE</h1>
-    <p>Tap tombol untuk mulai scan</p>
-
-    <button id="startBtn">📷 MULAI SCAN</button>
+    <p>Arahkan QR ke kamera</p>
 
     <div id="reader"></div>
+
+    <div class="hint">
+      Kamera akan otomatis mendeteksi QR
+    </div>
+
+    <div class="footer">
+      Pemilihan OSIS
+    </div>
   </div>
 
   <script>
-    const html5QrCode = new Html5Qrcode("reader");
+    // Anti back & refresh (kiosk-friendly)
+    history.pushState(null, null, location.href);
+    window.onpopstate = () => {
+      history.pushState(null, null, location.href);
+    };
+
     let isScanned = false;
+    const html5QrCode = new Html5Qrcode("reader");
 
-    document.getElementById("startBtn").onclick = () => {
-      document.getElementById("reader").style.display = "block";
-      document.getElementById("startBtn").style.display = "none";
-
+    function startScanner() {
       html5QrCode.start(
         { facingMode: "environment" },
-        { fps: 10, qrbox: { width: 220, height: 220 } },
+        {
+          fps: 10,
+          qrbox: { width: 220, height: 220 }
+        },
         (decodedText) => {
           if (isScanned) return;
           isScanned = true;
 
+          // Hentikan kamera sebelum pindah halaman
           html5QrCode.stop().then(() => {
+            // Redirect ke link di QR (Apps Script voting)
             window.location.replace(decodedText);
           });
+        },
+        (error) => {
+          // error diabaikan agar tidak spam
         }
-      ).catch(err => {
-        alert("Kamera tidak bisa diakses.\nPastikan izin kamera aktif.");
+      ).catch((err) => {
+        alert("Kamera tidak bisa diakses.\nPastikan izin kamera diaktifkan.");
         console.error(err);
       });
-    };
+    }
+
+    // Auto start saat halaman terbuka
+    startScanner();
   </script>
 </body>
 </html>
