--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     }
 
     button {
-      margin-top: 12px;
-      padding: 8px 14px;
+      margin-top: 14px;
+      padding: 10px 16px;
       border-radius: 10px;
       border: none;
       background: #22c55e;
@@ -74,6 +74,41 @@
       font-size: 12px;
       opacity: 0.4;
     }
+
+    /* 🔥 FLASH HIJAU */
+    #flash {
+      position: fixed;
+      inset: 0;
+      background: rgba(34, 197, 94, 0.35);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.25s ease;
+      z-index: 999;
+    }
+
+    #flash.active {
+      opacity: 1;
+    }
+
+    #scan-status {
+      position: fixed;
+      bottom: 24px;
+      left: 50%;
+      transform: translateX(-50%) scale(0.9);
+      background: #22c55e;
+      color: #020617;
+      padding: 10px 18px;
+      border-radius: 999px;
+      font-weight: bold;
+      opacity: 0;
+      transition: all 0.25s ease;
+      z-index: 1000;
+    }
+
+    #scan-status.show {
+      opacity: 1;
+      transform: translateX(-50%) scale(1);
+    }
   </style>
 </head>
 
@@ -84,35 +119,15 @@
 
     <div id="reader"></div>
 
-    <!-- tombol ganti kamera -->
     <button id="switchCam">🔄 Ganti Kamera</button>
 
     <div class="hint">Kamera akan otomatis mendeteksi QR</div>
     <div class="footer">Pemilihan OSIS</div>
   </div>
-<script>
-  function playBeep() {
-    const ctx = new (window.AudioContext || window.webkitAudioContext)();
-if (ctx.state === "suspended") {
-  ctx.resume();
-}
-    const oscillator = ctx.createOscillator();
-    const gainNode = ctx.createGain();
 
-    oscillator.type = "sine";
-    oscillator.frequency.value = 880; // nada beep
-    gainNode.gain.value = 0.2;
-
-    oscillator.connect(gainNode);
-    gainNode.connect(ctx.destination);
-
-    oscillator.start();
-    setTimeout(() => {
-      oscillator.stop();
-      ctx.close();
-    }, 120); // durasi beep (ms)
-  }
-</script>
+  <!-- FLASH ELEMENT -->
+  <div id="flash"></div>
+  <div id="scan-status">QR TERBACA ✓</div>
 
   <script>
     // Anti back & refresh (kiosk-friendly)
@@ -136,11 +151,15 @@ if (ctx.state === "suspended") {
           if (isScanned) return;
           isScanned = true;
 
-          playBeep(); // 🔔 BEEP DI SINI
+          // 🔥 FLASH + STATUS
+          document.getElementById("flash").classList.add("active");
+          document.getElementById("scan-status").classList.add("show");
 
-          html5QrCode.stop().then(() => {
-            window.location.replace(decodedText);
-          });
+          setTimeout(() => {
+            html5QrCode.stop().then(() => {
+              window.location.replace(decodedText);
+            });
+          }, 600);
         },
         () => {}
       ).catch(err => {
@@ -149,13 +168,15 @@ if (ctx.state === "suspended") {
       });
     }
 
-    // ambil daftar kamera
+    // Ambil daftar kamera
     Html5Qrcode.getCameras().then(devices => {
       cameras = devices;
-      startScanner(cameras[0]?.id);
+      if (cameras.length > 0) {
+        startScanner(cameras[0].id);
+      }
     });
 
-    // ganti kamera
+    // Tombol ganti kamera
     document.getElementById("switchCam").onclick = () => {
       if (cameras.length < 2) return;
 
